--- a/package.json
+++ b/package.json
@@ -5,32 +5,37 @@
   "scripts": {
     "start": "node server.js",
     "build": "webpack --progress --verbose --colors --display-error-details --config ./webpack/prod.webpack.config.js",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "test": "jest",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.0.20",
-    "babel-eslint": "^4.1.3",
-    "babel-loader": "^6.0.1",
-    "babel-preset-es2015": "^6.0.15",
-    "babel-preset-react": "^6.0.15",
-    "babel-preset-stage-0": "^6.0.15",
-    "eslint": "^1.10.3",
-    "eslint-plugin-react": "^3.6.2",
-    "lodash": "^4.14.1",
-    "react-hot-loader": "^1.3.0",
-    "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.1"
+    "babel-core": "*",
+    "babel-eslint": "*",
+    "babel-loader": "*",
+    "babel-preset-es2015": "*",
+    "babel-preset-react": "*",
+    "babel-preset-stage-0": "*",
+    "eslint": "*",
+    "eslint-plugin-react": "*",
+    "jest-cli": "*",
+    "lodash": "*",
+    "react-hot-loader": "*",
+    "webpack": "*",
+    "webpack-dev-server": "*",
+    "@kadira/storybook": "^2.21.0"
   },
   "dependencies": {
-    "react": "^0.14.6",
-    "react-dom": "^0.14.6",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
-    "react-router": "^2.6.1",
-    "react-router-redux": "^4.0.5",
-    "redux": "^3.5.2",
-    "redux-auth-wrapper": "^0.6.0",
-    "redux-form": "^5.3.2",
+    "react-router": "^3.0.0",
+    "react-router-redux": "^4.0.6",
+    "redux": "^3.6.0",
+    "redux-auth-wrapper": "^0.8.0",
+    "redux-form": "^6.1.1",
     "redux-thunk": "^2.1.0"
   }
 }
